--- a/index.html
+++ b/index.html
@@ -8,6 +8,61 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="sidebar">
+        <div>
+            <h3>Gerren Ballard</h3>
+            <p>Front-end Developer</p>
+        </div>
+        <div id="location">
+            <div><p>Residence:</p><p>United States</p></div>
+            <div><p>City:</p><p>United States</p></div>
+            <div><p>age</p><p>31</p></div>
+        </div>
+        <div id="skills">
+            <ul>
+                <li>html</li>
+                <li>CSS</li>
+                <li>JS</li>
+                <li>React</li>
+                <li>Ruby</li>
+            </ul>
+        </div>
+        <div id="additional">
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>Sqlite3</li>
+            <li>Git Knowledge</li>
+        </div>
+        <div id="CV">
+            Download CV
+        </div>
+        <div id="socials">
+
+
+
+        </div>
+    </section>
+    <section id="about">
+        <p>Passionate Web Developer with experience and adept in design, implementation, testing, and maintenance of 
+            web applications. Proficient in technologies, such as HTML, CSS, JavaScript, and React.js. </p>
+    </section>
+    <section id="projects"></section>
+    <section id="education"></section>
+    <section id="references">
+        <h3>References:</h3>
+        <div>
+           <ol>
+              <li>Benjamin Ashenbrenner from Flatiron School</li>
+               <ul>
+                  <li>Email: benjamin.ashenbrenner@flatironschool.com</li>
+               </ul>
+               <li>Ryan Smith</li>
+               <ul>
+                  <li>phone: (678) 548-5815</li>
+                  <li>Email: ryansmith0591@gmail.com</li>      
+               </ul> 
+           </ol>
+        </div>
+    </section>
 </body>
 </html>
