Sidebar Title styling
added a progile picture and adjust the positioning of the profile picture, name,
and job title.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <section id="sidebar">
-        <div>
+        <div id="title">
+            <img src="vinsmoke_sanji_jolly_roger_by_jormxdos_dfgi7di-fullview.jpg" alt="vinsmoke sanji">
             <h3>Gerren Ballard</h3>
             <p>Front-end Developer</p>
         </div>
