--- a/index.html
+++ b/index.html
@@ -10,29 +10,58 @@
 <body>
     <section id="sidebar">
         <div id="title">
-            <img src="vinsmoke_sanji_jolly_roger_by_jormxdos_dfgi7di-fullview.jpg" alt="vinsmoke sanji">
+            <img src="logos/vinsmoke_sanji_jolly_roger_by_jormxdos_dfgi7di-fullview.jpg" alt="vinsmoke sanji">
             <h3>Gerren Ballard</h3>
             <p>Front-end Developer</p>
+            <p>UX/UI Design</p>
         </div>
         <div id="location">
-            <div><p>Residence:</p><p>United States</p></div>
-            <div><p>City:</p><p>United States</p></div>
-            <div><p>age</p><p>31</p></div>
+            <p class="q">Residence:</p>
+            <p class="a">United States</p>
+            <p class="q">City:</p>
+            <p class="a">San Antonio</p>
+            <p class="q">age</p>
+            <p class="a">31</p>
         </div>
         <div id="skills">
             <ul>
-                <li>html</li>
-                <li>CSS</li>
-                <li>JS</li>
-                <li>React</li>
-                <li>Ruby</li>
+                <li><img src="logos/html-logo.svg" alt="html-logo"></li>
+                <li><img src="logos/css-logo.svg" alt="css-logo"></li>
+                <li><img src="logos/javascript-logo.svg" alt="javascript-logo"></li>
+                <li><img src="logos/react-logo.svg" alt=""></li>
+                <li><img src="logos/ruby-logo.svg" alt="ruby-logo"></li>
             </ul>
         </div>
         <div id="additional">
-            <li>Bootstrap</li>
-            <li>Ruby on Rails</li>
-            <li>Sqlite3</li>
-            <li>Git Knowledge</li>
+            <ul>
+                <li>Bootstrap</li>
+                <li>Ruby on Rails</li>
+                <li>Sqlite3</li>
+                <li>Git Knowledge</li>
+            </ul>
+        </div>
+        <div id="education">
+            <ul>
+                <li>FlatIron School</li>
+                <ul>
+                    <li>
+                        2021-2022
+                    </li>
+                    <li>
+                        html, css, javascript, react, ruby, ruby on rails, squlite3, Git, Github 
+                    </li>
+                </ul>
+                <li>Coursera</li>
+                <ul>
+                    <li>2022-2023</li>
+                    <li>html, css, javascript, responsive web design, bootstrap3</li>
+                </ul>
+                <li>The Oden Project</li>
+                <ul>
+                    <li>html, webpack, node.js</li>
+                </ul>
+            </ul>
+
         </div>
         <div id="CV">
             Download CV
@@ -48,7 +77,7 @@
             web applications. Proficient in technologies, such as HTML, CSS, JavaScript, and React.js. </p>
     </section>
     <section id="projects"></section>
-    <section id="education"></section>
+
     <section id="references">
         <h3>References:</h3>
         <div>
