--- a/index.html
+++ b/index.html
@@ -4,95 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <section id="sidebar">
-        <div id="title">
-            <img src="logos/vinsmoke_sanji_jolly_roger_by_jormxdos_dfgi7di-fullview.jpg" alt="vinsmoke sanji">
-            <h3>Gerren Ballard</h3>
-            <p>Front-end Developer</p>
-            <p>UX/UI Design</p>
-        </div>
-        <div id="location">
-            <p class="q">Residence:</p>
-            <p class="a">United States</p>
-            <p class="q">City:</p>
-            <p class="a">San Antonio</p>
-            <p class="q">age</p>
-            <p class="a">31</p>
-        </div>
-        <div id="skills">
-            <ul>
-                <li><img src="logos/html-logo.svg" alt="html-logo"></li>
-                <li><img src="logos/css-logo.svg" alt="css-logo"></li>
-                <li><img src="logos/javascript-logo.svg" alt="javascript-logo"></li>
-                <li><img src="logos/react-logo.svg" alt=""></li>
-                <li><img src="logos/ruby-logo.svg" alt="ruby-logo"></li>
-            </ul>
-        </div>
-        <div id="additional">
-            <ul>
-                <li>Bootstrap</li>
-                <li>Ruby on Rails</li>
-                <li>Sqlite3</li>
-                <li>Git Knowledge</li>
-            </ul>
-        </div>
-        <div id="education">
-            <ul>
-                <li>FlatIron School</li>
-                <ul>
-                    <li>
-                        2021-2022
-                    </li>
-                    <li>
-                        html, css, javascript, react, ruby, ruby on rails, squlite3, Git, Github 
-                    </li>
-                </ul>
-                <li>Coursera</li>
-                <ul>
-                    <li>2022-2023</li>
-                    <li>html, css, javascript, responsive web design, bootstrap3</li>
-                </ul>
-                <li>The Oden Project</li>
-                <ul>
-                    <li>html, webpack, node.js</li>
-                </ul>
-            </ul>
-
-        </div>
-        <div id="CV">
-            Download CV
-        </div>
-        <div id="socials">
-
-
-
-        </div>
+    <section id="welcome">
+        <h1>Hello,</h1>
+        <h1>My name is Gerren Ballard</h1>
     </section>
+    <div id="profile">
+        <img src="logos/gerren.png" alt="Gerren">
+    </div>
     <section id="about">
-        <p>Passionate Web Developer with experience and adept in design, implementation, testing, and maintenance of 
-            web applications. Proficient in technologies, such as HTML, CSS, JavaScript, and React.js. </p>
-    </section>
-    <section id="projects"></section>
-
-    <section id="references">
-        <h3>References:</h3>
-        <div>
-           <ol>
-              <li>Benjamin Ashenbrenner from Flatiron School</li>
-               <ul>
-                  <li>Email: benjamin.ashenbrenner@flatironschool.com</li>
-               </ul>
-               <li>Ryan Smith</li>
-               <ul>
-                  <li>phone: (678) 548-5815</li>
-                  <li>Email: ryansmith0591@gmail.com</li>      
-               </ul> 
-           </ol>
+        <p>
+            A passionate and dedicated web developer with a strong foundation<br>
+            in front-end technologies and a keen eye for design, I bring practical<br>
+            experience and a drive to continuously improve and learn. My expertise<br>
+            includes HTML5, CSS3, JavaScript, React, and Bootstrap, enabling me to create<br> 
+            responsive, user-friendly, and visually appealing web applications.<br>
+            Additionally, my knowledge of SQLite3 and Ruby on Rails allows me to<br> 
+            understand and integrate back-end functionalities seamlessly.
+        </p>
+        <div id="skills">
+            <h1>Technical Skills</h1>
+            <ul>
+                <li>HTML5 & CSS3: Proficient in building semantically structured and accessible<br> web pages with modern styling techniques.</li>
+                <li>JavaScript: Skilled in adding interactivity and dynamic behavior to web applications.</li>
+                <li>Bootstrap: Experienced in utilizing Bootstrap's responsive grid system and components<br> to create mobile-first designs.</li>
+                <li>React: Competent in building single-page applications with React, utilizing components,<br> state management, and hooks.</li>
+                <li>SQLite3: Basic knowledge of SQL for database management and querying.</li>
+                <li>Ruby on Rails: Understanding of MVC architecture and experience in developing full-stack<br> web applications with Rails.</li>
+                <li>Git & GitHub: Proficient in version control, branching, merging, and collaborative workflows.</li>
+            </ul>
         </div>
+    </section>
+    <section id="projects">
+        <h1>Gerren</h1>
     </section>
 </body>
 </html>
